@@ -18,7 +18,8 @@ functionality but looks like a \helpref{wxButton}{wxbutton}.
 You can see wxToggleButton in action in the sixth page of the 
 \helpref{controls}{samplecontrols} sample.
 
-{\bf NB:} This class is only available under wxMSW and wxGTK currently.
+{\bf NB:} This class is only available under wxMSW, wxGTK and wxMotif 
+currently.
 
 \wxheading{Derived from}
 
